--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>This is my second program.</h1>
-</body>
+<html>
+	<head>
+		<title>CSS Shapes Lab</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<!-- Create a div with id 'square' -->
+        <div id=squre > </div>
+        <br>
+        <div id=circle > </div>
+		<!-- Create a div with id 'circ
+	</body>
 </html>
